Place image gallery and zoom viewer on mobile

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "easyzoom": "^2.5.0",
     "foundation-sites": "^5.5.3",
     "jquery": "^3.3.1",
+    "jquery-lazyload": "^1.9.7",
     "jquery-tabs": "^0.5.3",
+    "jquery.panzoom": "^3.2.2",
     "jstree": "vakata/jstree",
     "lazysizes": "4.1.2",
     "lodash": "^4.17.4",
