Update PDP details section variants/cta btn

--- a/config.json
+++ b/config.json
@@ -107,6 +107,8 @@
     "fontSize-h4": 20,
     "fontSize-h5": 15,
     "fontSize-h6": 13,
+    "padding-normal": 15,
+    "padding-small": 10,
     "applePay-button": "black",
     "color-textBase": "#333333",
     "color-textBase--hover": "#757575",
