Show Correct Retail and sales price

--- a/config.json
+++ b/config.json
@@ -306,7 +306,7 @@
     "pdp-price-label": "",
     "pdp-sale-price-label": "Now:",
     "pdp-non-sale-price-label": "Was:",
-    "pdp-retail-price-label": "MSRP:",
+    "pdp-retail-price-label": "Traditional Retail:",
     "pdp-custom-fields-tab-label": "Additional Information",
     "paymentbuttons-paypal-layout": "horizontal",
     "paymentbuttons-paypal-color": "gold",
