Update main color in config file

--- a/config.json
+++ b/config.json
@@ -110,15 +110,15 @@
     "padding-normal": 15,
     "padding-small": 10,
     "applePay-button": "black",
-    "color-textBase": "#333333",
-    "color-textBase--hover": "#757575",
-    "color-textBase--active": "#757575",
-    "color-textSecondary": "#757575",
-    "color-textSecondary--hover": "#333333",
-    "color-textSecondary--active": "#333333",
-    "color-textLink": "#333333",
-    "color-textLink--hover": "#757575",
-    "color-textLink--active": "#757575",
+    "color-textBase": "#0A0A0A",
+    "color-textBase--hover": "#0A0A0A",
+    "color-textBase--active": "#0A0A0A",
+    "color-textSecondary": "#0A0A0A",
+    "color-textSecondary--hover": "#0A0A0A",
+    "color-textSecondary--active": "#0A0A0A",
+    "color-textLink": "#0A0A0A",
+    "color-textLink--hover": "#0A0A0A",
+    "color-textLink--active": "#0A0A0A",
     "color-textHeading": "#444444",
     "color-primary": "#757575",
     "color-primaryDark": "#666666",
