--- a/config.json
+++ b/config.json
@@ -182,8 +182,8 @@
     "card--alternate-backgroundColor": "#ffffff",
     "card--alternate-borderColor": "#ffffff",
     "card--alternate-color--hover": "#ffffff",
-    "form-label-font-color": "#666666",
-    "input-font-color": "#666666",
+    "form-label-font-color": "#0a0a0a",
+    "input-font-color": "#0a0a0a",
     "input-border-color": "#cccccc",
     "input-border-color-active": "#999999",
     "input-bg-color": "#ffffff",
